# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  11 Jan 2003; Jack Morgan <jmorgan@gentoo.org> cnf/make.conf.sparc:
  updated make.conf.sparc to add CFLAGS for sparc32 and sparc64

  08 Jan 2003; Nicholas Jones <carpaski@gentoo.org> bin/g-cpan.pl:
  Added from bug 3450 -- Creates and merges perl module ebuilds on-the-fly
  from cpan and merges them.

  08 Jan 2003; Mark Guertin <gerk@gentoo.org> cnf/make.conf.ppc:
  updated make.conf.ppc to remove G3 options for CFLAGS and other
  small tweaks

*portage-2.0.47 (06 Jan 2003): UserPriv

  06 Jan 2003; Nicholas Jones <carpaski@gentoo.org> portage.py:
  Forced HOME to BUILD_PREFIX regardless of user. Added in a 'rm -Rf' notice
  to readonly-fs/Full-Disk notices. Disabled the usepkg on buildpkg function
  of portage. digraph.hasallzeros() added -- Determines if tree is zero depth.
	
  06 Jan 2003; Nicholas Jones <carpaski@gentoo.org> cnf/*: Added in the
  PORT_LOGDIR option and description. Also added a GENTOO_MIRRORS section
  back into the make.conf* files so that users are aware that they need to
  specify ibiblio. Killed the linefeeds in the sparc conf.

  06 Jan 2003; Nicholas Jones <carpaski@gentoo.org> emerge: options and
  actions fixup. Added new short options and long options. --buildpkgonly
  now works and restricts the process to deplists of zero depth. Updated
  the help for portage, and created a seperate shorthelp function with
  the terse, options-only, versions of the regular help. Fixed the env_update
  call after --fetchonly runs.

  06 Jan 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh:
  touchups to the user priv and logging code to kill the invalid user
  messages when portage:portage doesn't exist on the system.

*portage-2.0.47_pre4 (03 Jan 2003): UserPriv Works + Per-Ebuild logging

  04 Jan 2003; Nicholas Jones <carpaski@gentoo.org> portage.py:
  tokenize() fixups to remedy the || reduce problems. 
